able to create stock without dups
